--- a/css/main.css
+++ b/css/main.css
@@ -5,18 +5,68 @@
    ========================================================================== */
 
 
+#movie{
+    margin: 0 auto;
+    max-width:80%;
+    height:100%;
+}
+
+.navbar-header {
+    padding: 15px;
+    width: 100%;
+}
+.container{
+	width: 100%;
+}
+.navbar-brand,.navbar-header {
+  float: none;
+  width: 100%;
+}
 
 
+.movie-description{
+	background-color: #FFFFFF;
+	margin-bottom: 0%;
+	padding: 0px;
+	margin-left: 0px;
+}
+
+.figure-img{
+	width: 100%;
+	padding: 0px;
 
 
+}
+.row-cover .col-md-4{
+	padding: 0px;
+}
 
+.row .description{
+	display: block;
+	float: none;
+	height: 100px;/*Dinamically set*/
+	width: 100%;
+	margin-bottom: 10%;
 
+}
+.row .description p{
+	font-size: 100%;
 
+}
 
-
-
-
-
-
-
-
+.item .thumb {
+	width: 25%;
+	cursor: pointer;
+	float: left;
+}
+.item .thumb img {
+	width: 100%;
+	margin: 0px;
+	padding: 2px;
+}
+.item img {
+	width: 100%;	
+}
+.control1.left, .control1.right {
+    background-image: none
+}
