--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,7 @@
     padding: 15px;
     width: 100%;
 }
-.container{
-	width: 100%;
-}
+
 .navbar-brand,.navbar-header {
   float: none;
   width: 100%;
@@ -44,7 +42,7 @@
 .row .description{
 	display: block;
 	float: none;
-	height: 100px;/*Dinamically set*/
+	height: 100px;/*Dynamically set*/
 	width: 100%;
 	margin-bottom: 10%;
 
@@ -55,7 +53,6 @@
 }
 
 .item .thumb {
-	width: 25%;
 	cursor: pointer;
 	float: left;
 }
@@ -64,9 +61,11 @@
 	margin: 0px;
 	padding: 2px;
 }
-.item img {
-	width: 100%;	
-}
 .control1.left, .control1.right {
     background-image: none
+}
+
+.actor {
+	width:200px !important;
+	height:250px !important;
 }
